Fixed Cover not showing

--- a/src/master.css
+++ b/src/master.css
@@ -21,6 +21,7 @@ h1 {
 	padding-right: 8px;
 	font-size: 4.6em;
 	line-height: .95em;
+	text-shadow: 0px 2px 1px #294172;
 }
 
 h2 {
